--- a/app/win32/ResizingAnalyzer.vcxproj
+++ b/app/win32/ResizingAnalyzer.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="..\Analyzer.h" />
     <ClInclude Include="..\BatchAnalyzer.h" />
     <ClInclude Include="..\Comparison.h" />
+    <ClInclude Include="..\CompDecomp.h" />
     <ClInclude Include="..\Compressed.h" />
     <ClInclude Include="..\Decompressed.h" />
     <ClInclude Include="..\Double.h" />
@@ -25,6 +26,7 @@
     <ClInclude Include="..\Path.h" />
     <ClInclude Include="..\Paths.h" />
     <ClInclude Include="..\Process.h" />
+    <ClInclude Include="..\Resized.h" />
     <ClInclude Include="..\TgaImage.h" />
     <ClInclude Include="..\tga\tga.h" />
   </ItemGroup>
